// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders corretly 1`] = `
Array [
  <h3
    className="sc-bwzfXH bUqtjj"
  >
    Artist – Album (date)
  </h3>,
  <ul
    className="sc-bdVaJa euFgJ"
  >
    <li
      className="sc-htpNat flGfQk"
    >
      Deafheaven – Ordinary Corrupt Human Love (13.7.2018)
    </li>
    <li
      className="sc-htpNat jHhbwj"
    >
      Urfaust – Constellatory Practice
    </li>
  </ul>,
]
`;

exports[`Renders corretly if value doesn't match 1`] = `
Array [
  <h3
    className="sc-bwzfXH bUqtjj"
  >
    Artist – Album (date)
  </h3>,
  <ul
    className="sc-bdVaJa euFgJ"
  />,
]
`;
